test/files/neg/t750/Test_2.scala
// t750
object Test extends App {
  val a = Array(1, 2, 3)
  AO_1.f(a)
  AO_1.f[Int](a)
}
